Add table unbooking

--- a/TableBookingApp/Pages/Booktable.cshtml
+++ b/TableBookingApp/Pages/Booktable.cshtml
@@ -9,7 +9,7 @@
         <label for="number">Table Number</label>
         <input type="text" class="form-control" asp-for="@Model.TableNumber" readonly placeholder="@Model.TableNumber">
         <span asp-validation-for="@Model.TableNumber"></span>
-        <small id="tableNumber" class="form-text text-muted">Book table 1-8</small>
+        <small id="tableNumber" class="form-text text-muted">Table you are booking</small>
     </div>
     <div class="form-group">
         <label for="number">Who is booking?</label>
