--- a/TableBookingApp/Pages/ViewTables.cshtml
+++ b/TableBookingApp/Pages/ViewTables.cshtml
@@ -21,7 +21,7 @@
 
                 @if (table.Booked)
                 {
-                    <a asp-page="/UnBookTable" asp-route-number="@table.Number" class="card-link" asp>Unbook this table</a>
+                    <a asp-page="/UnBooktable" asp-route-number="@table.Number" class="card-link" asp>Unbook this table</a>
 
                 }
             </div>
